# vpn_private

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.android  Dockerfile.test  docker-compose.yml  vpn-mvp-plan.md
.github/workflows/: ci.yml
android/vpn-sdk/src/main/kotlin/com/vpn/protocol/: NativeVpnBridge.kt  ProtocolVpnService.kt  VpnHandshake.kt  VpnSession.kt
crates/vpn-android/: Cargo.toml
crates/vpn-android/src/: lib.rs
crates/vpn-api/: Cargo.toml
crates/vpn-api/migrations/: 001_initial_schema.sql  002_revoked_tokens.sql
crates/vpn-api/src/: auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  webhook.rs
crates/vpn-core/: Cargo.toml
crates/vpn-core/src/: crypto.rs  framing.rs  handshake.rs  lib.rs  tunnel.rs
crates/vpn-core/tests/: integration.rs
crates/vpn-ffi/: Cargo.toml  uniffi-bindgen.rs
crates/vpn-ffi/src/: lib.rs
crates/vpn-server/: Cargo.toml
crates/vpn-server/src/: auth.rs  config.rs  listener.rs  main.rs  metrics.rs  session.rs  tun.rs
deploy/: api-server.yml  inventory.ini  vpn-node.yml
deploy/group_vars/: all.yml
deploy/templates/: nginx-api.conf.j2  prometheus.yml.j2  vpn-api.service.j2  vpn-server-config.toml.j2  vpn-server.service.j2
ios/: build-rust.sh
ios/PacketTunnel/: Info.plist  PacketTunnelProvider.swift
ios/VPN/: Info.plist  VPN.entitlements
ios/VPN/App/: VPNApp.swift
ios/VPN/Models/: Models.swift
ios/VPN/Services/: APIClient.swift  AuthService.swift  VPNManager.swift
ios/VPN/Views/: HomeView.swift  OnboardingView.swift  ServerListView.swift  SettingsView.swift
scripts/: build-android.sh
tests/: integration.sh
