[workspace]
resolver = "2"
members = [
    "crates/vpn-core",
    "crates/vpn-server",
    "crates/vpn-api",
    "crates/vpn-ffi",
    "crates/vpn-android",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Crypto
ring = "0.17"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Buffers
bytes = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Error handling
thiserror = "2"
anyhow = "1"
# Sensitive data clearing
zeroize = "1"
