[package]
name = "vpn-android"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Android JNI bridge for vpn-core"

[lib]
crate-type = ["cdylib"]
name = "vpn_android"

[dependencies]
vpn-core = { path = "../vpn-core" }
jni = "0.21"
bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
